--- a/magrathea.ui
+++ b/magrathea.ui
@@ -476,7 +476,7 @@
            <x>10</x>
            <y>70</y>
            <width>701</width>
-           <height>41</height>
+           <height>81</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
@@ -494,10 +494,27 @@
             </property>
            </widget>
           </item>
+          <item row="1" column="0">
+           <widget class="QPushButton" name="pushButton_dummy">
+            <property name="text">
+             <string>Dummy</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QSpinBox" name="spinBox_dummy"/>
+          </item>
           <item row="0" column="2">
            <widget class="QLineEdit" name="Calib_value_lineEdit">
             <property name="readOnly">
              <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QPushButton" name="focus_test">
+            <property name="text">
+             <string>focus test 1</string>
             </property>
            </widget>
           </item>
