--- a/magrathea.ui
+++ b/magrathea.ui
@@ -475,7 +475,7 @@
           <rect>
            <x>10</x>
            <y>70</y>
-           <width>701</width>
+           <width>371</width>
            <height>81</height>
           </rect>
          </property>
@@ -515,6 +515,13 @@
            <widget class="QPushButton" name="focus_test">
             <property name="text">
              <string>focus test 1</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="2">
+           <widget class="QCheckBox" name="calib_from_file_Box">
+            <property name="text">
+             <string>Calibration from file</string>
             </property>
            </widget>
           </item>
