--- a/magrathea.ui
+++ b/magrathea.ui
@@ -474,9 +474,9 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>70</y>
+           <y>40</y>
            <width>371</width>
-           <height>81</height>
+           <height>107</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
@@ -522,6 +522,13 @@
            <widget class="QCheckBox" name="calib_from_file_Box">
             <property name="text">
              <string>Calibration from file</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QPushButton" name="Fiducial_finder_button_1">
+            <property name="text">
+             <string>Fid finder</string>
             </property>
            </widget>
           </item>
