--- a/magrathea.ui
+++ b/magrathea.ui
@@ -476,45 +476,21 @@
            <x>10</x>
            <y>40</y>
            <width>371</width>
-           <height>107</height>
+           <height>138</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
-          <item row="0" column="0">
-           <widget class="QPushButton" name="Calib_button">
+          <item row="2" column="0">
+           <widget class="QPushButton" name="focus_test">
             <property name="text">
-             <string>Calibrate px/um</string>
+             <string>focus test 1</string>
             </property>
            </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="QPushButton" name="Calib_button_2">
-            <property name="text">
-             <string>Calibrate um/px</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QPushButton" name="pushButton_dummy">
-            <property name="text">
-             <string>Dummy</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QSpinBox" name="spinBox_dummy"/>
           </item>
           <item row="0" column="2">
            <widget class="QLineEdit" name="Calib_value_lineEdit">
             <property name="readOnly">
              <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0">
-           <widget class="QPushButton" name="focus_test">
-            <property name="text">
-             <string>focus test 1</string>
             </property>
            </widget>
           </item>
@@ -525,10 +501,71 @@
             </property>
            </widget>
           </item>
+          <item row="3" column="3">
+           <widget class="QSpinBox" name="spinBox_input_F">
+            <property name="maximum">
+             <number>3</number>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="2">
+           <widget class="QSpinBox" name="spinBox_input">
+            <property name="maximum">
+             <number>5</number>
+            </property>
+            <property name="value">
+             <number>3</number>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QPushButton" name="pushButton_dummy">
+            <property name="text">
+             <string>Dummy</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QPushButton" name="Calib_button">
+            <property name="text">
+             <string>Calibrate px/um</string>
+            </property>
+           </widget>
+          </item>
           <item row="3" column="0">
            <widget class="QPushButton" name="Fiducial_finder_button_1">
             <property name="text">
-             <string>Fid finder</string>
+             <string>Fid finder 1</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QPushButton" name="Calib_button_2">
+            <property name="text">
+             <string>Calibrate um/px</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QPushButton" name="Fiducial_finder_button_2">
+            <property name="text">
+             <string>Fid Finder 2</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QSpinBox" name="spinBox_dummy"/>
+          </item>
+          <item row="4" column="2">
+           <widget class="QSpinBox" name="algorithm_box">
+            <property name="minimum">
+             <number>2</number>
+            </property>
+            <property name="maximum">
+             <number>3</number>
+            </property>
+            <property name="value">
+             <number>2</number>
             </property>
            </widget>
           </item>
