--- a/magrathea.ui
+++ b/magrathea.ui
@@ -499,6 +499,9 @@
             <property name="text">
              <string>Calibration from file</string>
             </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
           <item row="3" column="3">
