--- a/magrathea.ui
+++ b/magrathea.ui
@@ -105,7 +105,7 @@
         </sizepolicy>
        </property>
        <property name="currentIndex">
-        <number>2</number>
+        <number>0</number>
        </property>
        <widget class="QWidget" name="joystickTab">
         <attribute name="title">
@@ -173,14 +173,21 @@
            </item>
            <item>
             <layout class="QGridLayout" name="gridLayout_2">
-             <item row="2" column="1">
+             <item row="0" column="2">
+              <widget class="QPushButton" name="positiveZButton">
+               <property name="text">
+                <string>+z</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="2">
               <widget class="QPushButton" name="negativeZButton">
                <property name="text">
                 <string>-z</string>
                </property>
               </widget>
              </item>
-             <item row="1" column="2">
+             <item row="1" column="4">
               <widget class="QPushButton" name="positiveUButton">
                <property name="text">
                 <string>+u</string>
@@ -194,10 +201,17 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="1">
-              <widget class="QPushButton" name="positiveZButton">
+             <item row="0" column="3">
+              <widget class="QPushButton" name="positiveZ_2_Button">
                <property name="text">
-                <string>+z</string>
+                <string>+z 2</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="3">
+              <widget class="QPushButton" name="negativeZ_2_Button">
+               <property name="text">
+                <string>-z 2</string>
                </property>
               </widget>
              </item>
