--- a/magrathea.ui
+++ b/magrathea.ui
@@ -752,6 +752,31 @@
             <string>x axis</string>
            </property>
            <layout class="QGridLayout" name="gridLayout_21">
+            <item row="0" column="4">
+             <widget class="QDoubleSpinBox" name="xAxisSpeedDoubleSpinBox">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="layoutDirection">
+               <enum>Qt::LeftToRight</enum>
+              </property>
+              <property name="decimals">
+               <number>2</number>
+              </property>
+              <property name="maximum">
+               <double>99.989999999999995</double>
+              </property>
+              <property name="value">
+               <double>0.000000000000000</double>
+              </property>
+             </widget>
+            </item>
             <item row="0" column="0">
              <widget class="QCheckBox" name="xAxisEnableBox">
               <property name="sizePolicy">
@@ -765,7 +790,7 @@
               </property>
              </widget>
             </item>
-            <item row="0" column="5">
+            <item row="0" column="6">
              <spacer name="horizontalSpacer_21">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -830,7 +855,7 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="5">
+            <item row="1" column="6">
              <spacer name="horizontalSpacer_64">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -843,7 +868,7 @@
               </property>
              </spacer>
             </item>
-            <item row="2" column="5">
+            <item row="2" column="6">
              <spacer name="horizontalSpacer_66">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -855,31 +880,6 @@
                </size>
               </property>
              </spacer>
-            </item>
-            <item row="0" column="4">
-             <widget class="QDoubleSpinBox" name="xAxisSpeedDoubleSpinBox">
-              <property name="enabled">
-               <bool>true</bool>
-              </property>
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="layoutDirection">
-               <enum>Qt::LeftToRight</enum>
-              </property>
-              <property name="decimals">
-               <number>2</number>
-              </property>
-              <property name="maximum">
-               <double>99.989999999999995</double>
-              </property>
-              <property name="value">
-               <double>0.000000000000000</double>
-              </property>
-             </widget>
             </item>
             <item row="0" column="2">
              <widget class="QLineEdit" name="xAxisPositionLine">
@@ -958,6 +958,20 @@
             <item row="1" column="2">
              <widget class="QDoubleSpinBox" name="xAxisPositionMoveDoubleSpinBox"/>
             </item>
+            <item row="0" column="5">
+             <widget class="QLabel" name="label_8">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="5">
+             <widget class="QLabel" name="label_9">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
@@ -1019,7 +1033,7 @@
               </property>
              </widget>
             </item>
-            <item row="0" column="5">
+            <item row="0" column="6">
              <spacer name="horizontalSpacer_24">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -1048,7 +1062,7 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="5">
+            <item row="1" column="6">
              <spacer name="horizontalSpacer_56">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -1126,7 +1140,7 @@
               </property>
              </widget>
             </item>
-            <item row="2" column="5">
+            <item row="2" column="6">
              <spacer name="horizontalSpacer_58">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -1148,6 +1162,20 @@
             <item row="1" column="2">
              <widget class="QDoubleSpinBox" name="zAxisPositionMoveDoubleSpinBox"/>
             </item>
+            <item row="0" column="5">
+             <widget class="QLabel" name="label_12">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="5">
+             <widget class="QLabel" name="label_13">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
@@ -1157,85 +1185,7 @@
             <string>y axis</string>
            </property>
            <layout class="QGridLayout" name="gridLayout_22">
-            <item row="2" column="1">
-             <widget class="QLabel" name="label_64">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>move by [mm]:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QLabel" name="label_62">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>move to [mm]:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="3">
-             <widget class="QPushButton" name="yAxisStepMoveButton">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>move</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="1">
-             <widget class="QLabel" name="label_65">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>position [mm]:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="3">
-             <widget class="QPushButton" name="yAxisPositionMoveButton">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>move</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="5">
-             <spacer name="horizontalSpacer_26">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item row="1" column="5">
+            <item row="1" column="6">
              <spacer name="horizontalSpacer_68">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -1261,7 +1211,7 @@
               </property>
              </widget>
             </item>
-            <item row="2" column="5">
+            <item row="2" column="6">
              <spacer name="horizontalSpacer_70">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -1335,6 +1285,98 @@
             <item row="1" column="2">
              <widget class="QDoubleSpinBox" name="yAxisPositionMoveDoubleSpinBox"/>
             </item>
+            <item row="2" column="1">
+             <widget class="QLabel" name="label_64">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>move by [mm]:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLabel" name="label_62">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>move to [mm]:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="3">
+             <widget class="QPushButton" name="yAxisStepMoveButton">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>move</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="QLabel" name="label_65">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>position [mm]:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="3">
+             <widget class="QPushButton" name="yAxisPositionMoveButton">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>move</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="6">
+             <spacer name="horizontalSpacer_26">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="0" column="5">
+             <widget class="QLabel" name="label_10">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="5">
+             <widget class="QLabel" name="label_11">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
@@ -1399,7 +1441,7 @@
               </property>
              </widget>
             </item>
-            <item row="2" column="5">
+            <item row="2" column="6">
              <spacer name="horizontalSpacer_62">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -1425,7 +1467,7 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="5">
+            <item row="1" column="6">
              <spacer name="horizontalSpacer_60">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -1438,7 +1480,7 @@
               </property>
              </spacer>
             </item>
-            <item row="0" column="5">
+            <item row="0" column="6">
              <spacer name="horizontalSpacer_25">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -1525,6 +1567,20 @@
             <item row="1" column="2">
              <widget class="QDoubleSpinBox" name="uAxisPositionMoveDoubleSpinBox"/>
             </item>
+            <item row="0" column="5">
+             <widget class="QLabel" name="label_16">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="5">
+             <widget class="QLabel" name="label_17">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
@@ -1547,7 +1603,7 @@
             <string>z 2 axis</string>
            </property>
            <layout class="QGridLayout" name="gridLayout_11">
-            <item row="1" column="5">
+            <item row="1" column="6">
              <spacer name="horizontalSpacer_14">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -1601,7 +1657,7 @@
               </property>
              </widget>
             </item>
-            <item row="2" column="5">
+            <item row="2" column="6">
              <spacer name="horizontalSpacer_17">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -1614,7 +1670,7 @@
               </property>
              </spacer>
             </item>
-            <item row="0" column="5">
+            <item row="0" column="6">
              <spacer name="horizontalSpacer_11">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -1668,6 +1724,20 @@
              <widget class="QCheckBox" name="z_2_AxisStepRepeatBox">
               <property name="text">
                <string>continuous</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="5">
+             <widget class="QLabel" name="label_14">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="5">
+             <widget class="QLabel" name="label_15">
+              <property name="text">
+               <string>TextLabel</string>
               </property>
              </widget>
             </item>
