--- a/magrathea.ui
+++ b/magrathea.ui
@@ -643,6 +643,13 @@
             </property>
            </widget>
           </item>
+          <item row="4" column="4">
+           <widget class="QPushButton" name="test_button">
+            <property name="text">
+             <string>PushButton</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </widget>
