--- a/magrathea.ui
+++ b/magrathea.ui
@@ -517,10 +517,31 @@
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
-          <item row="3" column="3">
-           <widget class="QSpinBox" name="spinBox_input_F">
-            <property name="maximum">
-             <number>3</number>
+          <item row="3" column="1">
+           <widget class="QPushButton" name="Fiducial_finder_button_2">
+            <property name="text">
+             <string>Fid Finder 2</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QPushButton" name="Fiducial_finder_button_1">
+            <property name="text">
+             <string>Fid finder 1</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QPushButton" name="Calib_button">
+            <property name="text">
+             <string>Calibrate px/um</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QPushButton" name="pushButton_dummy">
+            <property name="text">
+             <string>Dummy</string>
             </property>
            </widget>
           </item>
@@ -534,24 +555,10 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QPushButton" name="pushButton_dummy">
-            <property name="text">
-             <string>Dummy</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QPushButton" name="Calib_button">
-            <property name="text">
-             <string>Calibrate px/um</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="0">
-           <widget class="QPushButton" name="Fiducial_finder_button_1">
-            <property name="text">
-             <string>Fid finder 1</string>
+          <item row="3" column="3">
+           <widget class="QSpinBox" name="spinBox_input_F">
+            <property name="maximum">
+             <number>3</number>
             </property>
            </widget>
           </item>
@@ -562,15 +569,29 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="1">
-           <widget class="QPushButton" name="Fiducial_finder_button_2">
+          <item row="2" column="2">
+           <widget class="QCheckBox" name="calib_from_file_Box">
             <property name="text">
-             <string>Fid Finder 2</string>
+             <string>Calibration from file</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
-           <widget class="QSpinBox" name="spinBox_dummy"/>
+          <item row="0" column="2">
+           <widget class="QLineEdit" name="Calib_value_lineEdit">
+            <property name="readOnly">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QPushButton" name="focus_test">
+            <property name="text">
+             <string>focus test 1</string>
+            </property>
+           </widget>
           </item>
           <item row="4" column="2">
            <widget class="QSpinBox" name="algorithm_box">
@@ -585,27 +606,13 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="0">
-           <widget class="QPushButton" name="focus_test">
-            <property name="text">
-             <string>focus test 1</string>
-            </property>
-           </widget>
+          <item row="1" column="1">
+           <widget class="QSpinBox" name="spinBox_dummy"/>
           </item>
-          <item row="0" column="2">
-           <widget class="QLineEdit" name="Calib_value_lineEdit">
-            <property name="readOnly">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="2">
-           <widget class="QCheckBox" name="calib_from_file_Box">
+          <item row="0" column="4">
+           <widget class="QPushButton" name="std_dev_button">
             <property name="text">
-             <string>Calibration from file</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
+             <string>std dev</string>
             </property>
            </widget>
           </item>
