--- a/magrathea.ui
+++ b/magrathea.ui
@@ -575,7 +575,7 @@
              <string>Calibration from file</string>
             </property>
             <property name="checked">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
            </widget>
           </item>
