--- a/magrathea.ui
+++ b/magrathea.ui
@@ -512,29 +512,36 @@
           <rect>
            <x>30</x>
            <y>10</y>
-           <width>429</width>
-           <height>138</height>
+           <width>435</width>
+           <height>163</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
+          <item row="4" column="4">
+           <widget class="QPushButton" name="destroy_Button">
+            <property name="text">
+             <string>destroy!!</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="4">
+           <widget class="QPushButton" name="std_dev_button">
+            <property name="text">
+             <string>std dev</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="3">
+           <widget class="QSpinBox" name="spinBox_input_F">
+            <property name="maximum">
+             <number>10</number>
+            </property>
+           </widget>
+          </item>
           <item row="3" column="1">
            <widget class="QPushButton" name="Fiducial_finder_button_2">
             <property name="text">
              <string>Fid Finder 2</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="0">
-           <widget class="QPushButton" name="Fiducial_finder_button_1">
-            <property name="text">
-             <string>Fid finder 1</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QPushButton" name="Calib_button">
-            <property name="text">
-             <string>Calibrate px/um</string>
             </property>
            </widget>
           </item>
@@ -545,23 +552,6 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="2">
-           <widget class="QSpinBox" name="spinBox_input">
-            <property name="maximum">
-             <number>14</number>
-            </property>
-            <property name="value">
-             <number>3</number>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="3">
-           <widget class="QSpinBox" name="spinBox_input_F">
-            <property name="maximum">
-             <number>3</number>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="1">
            <widget class="QPushButton" name="Calib_button_2">
             <property name="text">
@@ -569,13 +559,34 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="2">
-           <widget class="QCheckBox" name="calib_from_file_Box">
+          <item row="3" column="0">
+           <widget class="QPushButton" name="Fiducial_finder_button_1">
             <property name="text">
-             <string>Calibration from file</string>
+             <string>Fid finder 1</string>
             </property>
-            <property name="checked">
-             <bool>false</bool>
+           </widget>
+          </item>
+          <item row="3" column="4">
+           <widget class="QPushButton" name="color_button">
+            <property name="text">
+             <string>color</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QSpinBox" name="spinBox_dummy"/>
+          </item>
+          <item row="1" column="4">
+           <widget class="QPushButton" name="std_dev_many_button">
+            <property name="text">
+             <string>std dev many</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QPushButton" name="Calib_button">
+            <property name="text">
+             <string>Calibrate px/um</string>
             </property>
            </widget>
           </item>
@@ -583,6 +594,16 @@
            <widget class="QLineEdit" name="Calib_value_lineEdit">
             <property name="readOnly">
              <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="2">
+           <widget class="QSpinBox" name="spinBox_input">
+            <property name="maximum">
+             <number>99</number>
+            </property>
+            <property name="value">
+             <number>0</number>
             </property>
            </widget>
           </item>
@@ -599,20 +620,20 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
-           <widget class="QSpinBox" name="spinBox_dummy"/>
-          </item>
-          <item row="0" column="4">
-           <widget class="QPushButton" name="std_dev_button">
+          <item row="2" column="2">
+           <widget class="QCheckBox" name="calib_from_file_Box">
             <property name="text">
-             <string>std dev</string>
+             <string>Calibration from file</string>
+            </property>
+            <property name="checked">
+             <bool>false</bool>
             </property>
            </widget>
           </item>
-          <item row="1" column="4">
-           <widget class="QPushButton" name="std_dev_many_button">
+          <item row="5" column="2">
+           <widget class="QPushButton" name="f_loop_button">
             <property name="text">
-             <string>std dev many</string>
+             <string>fid finder loop</string>
             </property>
            </widget>
           </item>
